Home 데이터 조회

--- a/angular-petstore/src/app/nav/nav.component.html
+++ b/angular-petstore/src/app/nav/nav.component.html
@@ -23,5 +23,6 @@
       <span>angular-petstore</span>
     </mat-toolbar>
     <!-- Add Content Here -->
+    <router-outlet></router-outlet> 
   </mat-sidenav-content>
 </mat-sidenav-container>
