--- a/angular-petstore/src/app/list/list.component.html
+++ b/angular-petstore/src/app/list/list.component.html
@@ -1,3 +1,18 @@
+  <div fxLayout="row" fxLayoutAlign="center start" class="head-tab" *ngIf="categoryService.doSearch">
+    <mat-form-field class="head-item">
+      <mat-label>Input</mat-label>
+      <input type="text" matInput (input)="filterList($event)">
+      <mat-icon matSuffix>search</mat-icon>
+    </mat-form-field>
+    <mat-form-field class="head-item" >
+      <mat-label>Select</mat-label>
+      <mat-select (selectionChange)="categoryService.getItemsByCategory($event.value)">
+        <mat-option *ngFor="let cat of categoryService.categories" [value]="cat.catid">
+          {{cat.name}}
+        </mat-option>
+      </mat-select>
+    </mat-form-field>
+  </div>
   <mat-list>
       <mat-list-item *ngFor="let item of categoryService.items; last as last">
         <img matListAvatar src="{{ item.icon }}" alt="{{item.name}}">
