--- a/angular-petstore/src/styles.scss
+++ b/angular-petstore/src/styles.scss
@@ -2,3 +2,38 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.mat-card{
+    margin: 8px;
+}
+
+.wrap-box
+{
+    margin-top: 5%;
+    width: 100%;
+}
+
+.auth-button {
+    margin-top: 12px !important;
+    margin-left: 24px !important;
+    margin-right: 24px !important;
+    margin-bottom: 12px !important;
+    min-width: 150px;
+    max-width: 700px;
+    width: 90%;
+}
+
+.head-tab {
+    background-color: silver;
+    width: 100%;
+    text-align: center;
+}
+
+.head-item {
+    display: inline-block;
+    padding-left: 24px !important;
+    padding-right: 24px !important;
+    min-width: 150px;
+    max-width: 500px;
+    width: 50%;
+}
